[project]
name = "chatbot_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Arunangshu Biswas", email = "arunangshubsws@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.2",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.4",
    "langchainhub>=0.1.15",
    "neo4j>=5.20.0",
    "numpy>=1.26.4",
    "openai>=1.23.6",
    "opentelemetry-api>=1.24.0",
    "uvicorn[standard]>=0.29.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "flake8>=7.0.0",
    "python-dotenv>=1.0.1",
]

[tool.pdm]
distribution = false
