[project]
name = "tests"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Arunangshu Biswas", email = "arunangshubsws@gmail.com"},
]
dependencies = [
    "httpx>=0.27.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
]

[tool.pdm]
distribution = false
